gobmkida/c3/gtp_owl_attack
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gtp_owl_attack/src/interface/play_gtp.c:1754:34: error: use of undeclared identifier 'gtp_print_code_conversion'
gtp_printf( "%d", ( unsigned int)gtp_print_code_conversion[v1]); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/gtp_owl_attack/src/obj/2/play_gtp.o] Error 1
